test/compilable/test13582b.d
// REQUIRED_ARGS:
// PERMUTE_ARGS:
/*
TEST_OUTPUT:
---
compilable/test13582b.d(11): Deprecation: module test13582a is deprecated
---
*/
module test13582b;

import test13582a;
